# -beast-trader

./: .gitignore  .pre-commit-config.yaml  AUDIT.md  README.md  REPORT.md  auto_tuned.py  auto_tuned.py.bak.20260509-prefulltune  auto_tuned.py.bak.20260513-152643  auto_tuned.py.bak.20260513-165445-pre-phase2  auto_tuned.py.bak.20260513-171107-pre-phase3  auto_tuned.py.bak.20260513-172032-pre-phase4  auto_tuned.py.bak.20260514-121305-pre-widen-sl  auto_tuned.py.bak.20260514-121751-pre-btc-cd  auto_tuned.py.bak.20260514-194743-pre-bias-fix  auto_tuned.py.bak.20260514-195956-pre-range-filter  auto_tuned.py.bak.20260514-205227-pre-fib  config.py  config.py.bak.20260509-27sym  config.py.bak.20260509-31sym  pyproject.toml  requirements-lock.txt  requirements.txt  run.py  train_meta_labels.py  tune_lgbm.py  tune_trail.py
agent/: _xau_hardtune_20260619.py  alerting.py  bot_equity.py  brain.py  btc_mean_reversion.py  calendar_filter.py  crypto_tsmom.py  decision_reasons.py  drift_detector.py  emergency_exit.py  equity_guardian.py  exit_intelligence.py  fib50_strategy.py  fvg_detector.py  fvg_strategy.py  gold_h4.py  gold_smc.py  indices_mr.py  learning_engine.py  level_memory.py  m1_scalper.py  master_brain.py  metrics.py  mtf_intelligence.py  news_blackout.py  nr7_breakout.py  order_flow.py  pattern_learner.py  pine_trend_v3.py  portfolio_risk.py  rl_learner.py  scalp_brain.py  sma_breakout.py  smart_entry.py  sweep_reclaim.py  trade_intelligence.py  trend_follower.py  wyckoff_spring.py
audit_20260522/: _check_cache.py  _debug_cands.py  _regime_distribution.py  _smoke_fold_xau.py  _smoke_post_big_win.py  _smoke_post_big_win_off.py  _smoke_test.py  _smoke_test2.py  _smoke_wf.py  _sp500_sl_fine.py  _test_direct.py  _test_reload.py  _v5_backtest_patched.py  _verify_just_rf.py  _verify_ship.py  _verify_sp500_detail.py  _xauusd_hard_tune.py  analyze.py  analyze2.py  analyze_summary.json  avg_win_cap_analysis.md  avg_win_cap_dist.py  avg_win_cap_print.py  avg_win_cap_sim.json  avg_win_cap_sim.py  bt_loss_streak_patch.diff  bt_peak_giveback_elc_patch.diff  bt_post_big_win_patch.diff  bt_score_tier_patch.diff  bt_trail_verify.json  bt_trail_verify.md  bt_trail_verify.py  entry_pipeline_audit.md  inspect_sl.py  parity_reaudit.md  parity_reaudit.py  parity_reaudit_detail.csv  parity_reaudit_detail_refined.csv  parity_reaudit_raw.json  per_sym_entry_tune.py  (+19 more)
audit_pre_monday/: 03_rl_deep.md  04_safety_fire.md  05_5k_scaling.md  _rl_synth_trace.py  _rl_synth_trace2.py  parity_final.py  parity_final_detail.csv  parity_final_raw.json
backtest/: __init__.py  _trend_winner_uncap_livecap_20260723.py  _trend_winner_uncap_validate_20260723.py  ab_compare_rl_trail.json  baseline_pre_rl.json  cost_model.py  dragon_3sub_backtest.py  dragon_backtest.py  dragon_backtest_v2.py  dragon_backtest_v3.py  dragon_hybrid.py  dragon_institutional.py  engine.py  fib50_backtest.py  full_scan.py  fvg_vectorized.py  grid_tune.py  grid_tune_m15.py  honest_backtest.py  ict_fvg_backtest.py  live_set_validation.json  mirror_backtest.py  mtf_backtest.py  post_fix_validation.json  scan_all.py  sma_breakout_backtest.py  trail_profile_test.py  universe_validation.json  v5_backtest.py  walk_forward.py
dashboard/: app.py  pro_dashboard.py  v2_api.py  vue_app.py
data/: beast.db-journal  feature_engine.py  retrain_queue.json  tick_streamer.py  trade_journal.db.bak.20260509_123335
entry_research_20260522/: 01_pullback.json  01_pullback.md  02_liquidity_sweep.json  02_liquidity_sweep.md  03_volume.json  03_volume.md  03_volume.py  03_volume_iter2.py  04_mtf_confluence.json  04_mtf_confluence.md  05_order_block.json  05_order_block.md  06_divergence.json  06_divergence.md  07_session.json  07_session.md  07_session_run.py  08_min_rr.json  08_min_rr.md  08_min_rr.py  09_adx.json  09_adx.md  09_run_adx.py  10_stat_edge.json  10_stat_edge.md  10_stat_edge_portfolio_wf.json  10_stat_edge_variants.json  _add_recommendation.py  _finalize_json.py  _inspect_cells.py  _run_mtf_confluence.py  _run_stat_edge.py  _run_stat_edge_v2.py  _run_stat_edge_v3.py  baseline.json  compare_dd.py  eligibility.py  inspect_ukousd.py  iter1_results.json  iter2_results.json  (+20 more)
execution/: executor.py  mt5_client.py
launchd/: com.dragon.backup.plist  com.dragon.bridge-dashboard.plist  com.dragon.bridge-tick.plist  com.dragon.caffeinate.plist  com.dragon.db-vacuum.plist  com.dragon.drift-check.plist  com.dragon.feed-watchdog.plist  com.dragon.fetch-d1.plist  com.dragon.learning-summary.plist  com.dragon.live-drift.plist  (+11 more)
(+608 files in other folders)
